force-app/main/default/objects/Pricebook2/fields/Case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>Case_safe_id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Case safe id</label>
    <type>Text</type>
</CustomField>