force-app/main/default/objects/Pricebook2/fields/Enqix_Code__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Code__c</fullName>
    <label>Enqix Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>