force-app/main/default/objects/Pricebook2/fields/Enqix_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_ID__c</fullName>
    <externalId>true</externalId>
    <label>Enqix ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>