force-app/main/default/objects/Pricebook2/fields/Enqix_Name__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Name__c</fullName>
    <label>Enqix Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>