force-app/main/default/objects/Pricebook2/fields/Enqix_PK__c.field-meta.xml
<CustomField>
    <fullName>Enqix_PK__c</fullName>
    <label>Enqix PK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>