force-app/main/default/objects/Pricebook2/fields/Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this record is the most recent version of the pricelist</description>
    <label>Most Recent?</label>
    <type>Checkbox</type>
</CustomField>